Added Planet And Rock OBJ and Skybox OBJ and IMAGE.

--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClInclude Include="Source\Camera3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Assignment3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\SimpleFragmentShader.fragmentshader">
