--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -23,6 +23,8 @@
     <ClCompile Include="source\moveGhost.cpp" />
     <ClCompile Include="Source\PlayerStat.cpp" />
     <ClCompile Include="Source\shader.cpp" />
+    <ClCompile Include="Source\ToolSection.cpp" />
+    <ClCompile Include="Source\ToolUI.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -39,6 +41,8 @@
     <ClInclude Include="Source\PlayerStat.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\shader.hpp" />
+    <ClInclude Include="Source\ToolSection.h" />
+    <ClInclude Include="Source\ToolUI.h" />
     <ClInclude Include="Source\Utility.h" />
     <ClInclude Include="Source\Vertex.h" />
   </ItemGroup>
