--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -21,7 +21,7 @@
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\OBJAnimation.cpp" />
-    <ClCompile Include="source\moveGhost.cpp" />
+    <ClCompile Include="source\HostileMob.cpp" />
     <ClCompile Include="Source\PlayerStat.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\ToolSection.cpp" />
@@ -39,6 +39,7 @@
     <ClInclude Include="Source\Material.h" />
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
+    <ClInclude Include="Source\HostileMob.h" />
     <ClInclude Include="Source\OBJAnimation.h" />
     <ClInclude Include="Source\PlayerStat.h" />
     <ClInclude Include="Source\Scene.h" />
