--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -24,7 +24,7 @@
     <ClCompile Include="source\HostileMob.cpp" />
     <ClCompile Include="Source\PlayerStat.cpp" />
     <ClCompile Include="Source\shader.cpp" />
-    <ClCompile Include="Source\Tools.cpp" />
+    <ClCompile Include="Source\Misc.cpp" />
     <ClCompile Include="Source\ToolSection.cpp" />
     <ClCompile Include="Source\ToolUI.cpp" />
     <ClCompile Include="Source\Utility.cpp" />
@@ -45,7 +45,7 @@
     <ClInclude Include="Source\PlayerStat.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\shader.hpp" />
-    <ClInclude Include="Source\Tools.h" />
+    <ClInclude Include="Source\Misc.h" />
     <ClInclude Include="Source\ToolSection.h" />
     <ClInclude Include="Source\ToolUI.h" />
     <ClInclude Include="Source\Utility.h" />
