-Moved All render codes to new cpp file "Renders.cpp" -Changed naming of scenes -Added scene for level 1 -Floor of scene 1 moves with player

--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="Source\OBJAnimation.cpp" />
     <ClCompile Include="source\HostileMob.cpp" />
     <ClCompile Include="Source\PlayerStat.cpp" />
+    <ClCompile Include="source\Renders.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\Misc.cpp" />
     <ClCompile Include="Source\ToolSection.cpp" />
