--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="Source\SPGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SwitchLightPuzzle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -115,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\SPGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SwitchLightPuzzle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
