Changing of scene not tested! Do not touch any codes in application.
Changelog:
Created a new CPP for cut scenes.
* Do remember to create a new header and cpp. file for every scene.

Re-arraged some codes and put most of the codes into a function. Just search for the function and change the codes.

--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -61,6 +61,12 @@
     <ClCompile Include="source\MapRendering.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GlobalVariables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\SPGameSceneTwo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -124,6 +130,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\SwitchLightPuzzle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GlobalVariables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SPGameSceneTwo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
