--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClCompile Include="source\SceneLevel1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\SPGameCutScene1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -142,6 +145,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\SceneLevel1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\SPGameCutScene1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
