Added ItemStat files Linking ItemStat with Tools

--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="source\CutSceneOneRenders.cpp" />
     <ClCompile Include="Source\GlobalVariables.cpp" />
+    <ClCompile Include="Source\ItemStat.cpp" />
     <ClCompile Include="source\MapRender.cpp" />
     <ClCompile Include="source\SceneLevelOneARenders.cpp" />
     <ClCompile Include="source\SceneEndRenders.cpp" />
@@ -44,6 +45,7 @@
   <ItemGroup>
     <ClInclude Include="Source\Application.h" />
     <ClInclude Include="Source\GlobalVariables.h" />
+    <ClInclude Include="Source\ItemStat.h" />
     <ClInclude Include="source\SceneLevelOneA.h" />
     <ClInclude Include="source\SceneLevelOneB.h" />
     <ClInclude Include="Source\SceneStart.h" />
