testing new stuff

--- a/ComGraphics/ComGraphics/ComGraphics.vcxproj
+++ b/ComGraphics/ComGraphics/ComGraphics.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="Source\Misc.cpp" />
     <ClCompile Include="Source\SceneEnd.cpp" />
     <ClCompile Include="Source\CutSceneOne.cpp" />
+    <ClCompile Include="Source\spawnPoints.cpp" />
     <ClCompile Include="Source\SwitchLightPuzzle.cpp" />
     <ClCompile Include="Source\ToolSection.cpp" />
     <ClCompile Include="Source\ToolUI.cpp" />
@@ -65,6 +66,7 @@
     <ClInclude Include="Source\Misc.h" />
     <ClInclude Include="Source\SceneEnd.h" />
     <ClInclude Include="Source\CutSceneOne.h" />
+    <ClInclude Include="Source\spawnPoints.h" />
     <ClInclude Include="Source\SwitchLightPuzzle.h" />
     <ClInclude Include="Source\ToolSection.h" />
     <ClInclude Include="Source\ToolUI.h" />
